--- a/template/Fallstudie/Kraftfahzeuge/Umweltbelastungen durch Kraftfahrzeuge/Umweltbelastungen durch Kraftfahrzeuge.tex
+++ b/template/Fallstudie/Kraftfahzeuge/Umweltbelastungen durch Kraftfahrzeuge/Umweltbelastungen durch Kraftfahrzeuge.tex
@@ -25,16 +25,16 @@ Die Menge der Abgase die durch die Abgasanlage strömen ist von der Größe des 
 
 \subsection{Feinstaub}
 Feinstaub ist ein fester oder flüssiger Stoff der nicht sofort zu Boden sinkt.
-Neben der Art des Feinstaubes ist unter anderem die Wetterlage für die Verbreitung und Absenkung von Feinstaub verantwortlich.
+Neben der Art des Feinstaubes ist unter anderem die Wetterlage für die Verbreitung und Absenkung von Feinstaub entscheidend.
 
-Bei Trockenheit kann sich Feinstaub gut ausbreiten und verweilt länger in der Luft, hohe Luftfeuchtigkeit beeinträchtigen die Ausbreitung.
+Luftfeuchtigkeit beeinträchtigt die Ausbreitung von Feinstaub da sich dieser bei geringer Luftfeuchtigkeit länger in Luft halten kann sich besser ausbreiten kann.
+
 Feinstäube werden als Particle Matter (PM, zu deutsch Stoffteilchen) bezeichnet. Diese Luftschadstoffe sind gesundheitsschädlich. \footnote{Westermann S. 327}
 
-Es wird Unterschieden zwischen Feinstaub der aus natürlichen Quellen entstanden ist und Feinstaub der durch menschliches Handeln entstanden ist.
+Unterschieden wird zwischen Feinstaub der aus natürlichen Quellen entstanden ist und Feinstaub der durch menschliches Handeln entstanden ist.
 
 \subsubsection{Feinstaub aus natürlichen Quellen}
-Natürlich Feinstäube sind ohne das Handeln durch den Menschen entstanden.
-Quellen für natürlichen Feinstaub sind:
+Natürlicher Feinstaub entsteht ohne menschliches Handeln durch:
 \begin{itemize}
 	\item Vulkane
 	\item Wald- und Buschbrände
@@ -45,26 +45,24 @@ Quellen für natürlichen Feinstaub sind:
 
 \subsubsection{Feinstaub durch menschliches Handeln}
 Feinstaub der durch menschliches Handeln entstanden ist wird auch anthropogener Feinstaub genannt.
-Quellen für Feinstaub durch menschliches Handeln sind:
+Feinstaub durch menschliches Handeln entsteht durch:
 \begin{itemize}
-	\item vom Straßenverkehr durch Verbrennung und Abrieb
+	\item Verbrennung und Abrieb vom Straßenverkehr
 	\item Verbrennungsabgase von Kraftwerken und Müllverbrennungsanlagen
-	\item Brände von Gebäuden
+	\item Brände von Gegenständen
 	\item Industrieprozesse wie die Stahlerzeugung
 \end{itemize}
 
-Zur Verbesserung der Luftreinhaltung können Kommunen und Städte Umweltzonen einrichten und Fahrverbote festlegen.
+Einrichtungen der Umweltzonen und Festlegung von Fahrverboten durch die Kommunen und Städte können zur Verbesserung der Luftreinhaltung führen.
 Das befahren einer Umweltzone ist dann nur mit einer entsprechenden Kennzeichnung des Fahrzeuges möglich, die man bei der zuständigen Behörde erlangen kann.
-
 
 
 
 \subsection{Infrastruktur}
 Auch die Infrastruktur belastet die Umwelt, indem:
 \begin{itemize}
-	\item für Parkplätze werden Flächen versiegeln
 	\item Wälder abgeholzt werden um die Verkehrsanbindung zu verbessern
-	\item Straßen vergrößert werden umd mehr Fahrzeuge zu ermöglichen
+	\item Straßen vergrößert um ein höheres Verkehrsaufkommen zu bewältigen
 	\item starke Erhitzung durch Sonneneinstrahlung auf dunklen Verkehrswegen
-	\item fehlende Bäume die Schatten spenden
+	\item Grünflächen abgeschafft werden um mehr Parkmöglichkeiten zu gewinnen
 \end{itemize}
