--- a/template/Fallstudie/Fallstudie.tex
+++ b/template/Fallstudie/Fallstudie.tex
@@ -1,3 +1,4 @@
+\input{Fallstudie/Einleitung/Einleitung.tex}
 \input{Fallstudie/Umweltbelastung/Umweltbelastung.tex}
 \input{Fallstudie/Kraftfahzeuge/Kraftfahzeuge.tex}
 
@@ -10,7 +11,7 @@
 \subsection{Hochautomatisierung}
 \subsection{Vollautomatisierung}
 
-\input{Fallstudie/Problemlösung durch Autonomes Fahren/Problemlösung durch Autonomes Fahren.tex}
+\input{Fallstudie/Problemlösung durch Assistenzsysteme/Problemlösung durch Assistenzsysteme.tex}
 
 
 % !!! hier kann man Beispiele aufführen, wie zb Bus, PKW, LKW; Traktor
