--- a/template/Fallstudie/Kraftfahzeuge/Kraftfahzeuge.tex
+++ b/template/Fallstudie/Kraftfahzeuge/Kraftfahzeuge.tex
@@ -9,3 +9,4 @@ Auch Züge oder Trambahnen gehören nicht in in die Kategorien, da sie an Bahngl
 \input{Fallstudie/Kraftfahzeuge/Teilsysteme von Kraftfahrzeugen/Teilsysteme von Kraftfahrzeugen.tex}
 \input{Fallstudie/Kraftfahzeuge/Fahrzeugklassen/Fahrzeugklassen.tex}
 \input{Fallstudie/Kraftfahzeuge/Umweltbelastungen durch Kraftfahrzeuge/Umweltbelastungen durch Kraftfahrzeuge.tex}
+\input{Fallstudie/Kraftfahzeuge/Assistenzsysteme/Asisstenzsysteme.tex}
