Struktur + Kapitel1 und 2

--- a/template/document.tex
+++ b/template/document.tex
@@ -45,6 +45,7 @@
 
 %start
 \input{01_einleitung/einleitung.tex}
+\input{01_einleitung/grundlagen.tex}
 \input{02_hauptteil/hauptteil.tex}
 \input{03_schluss/schluss.tex}
 %end
