--- a/template/01_einleitung/einleitung.tex
+++ b/template/01_einleitung/einleitung.tex
@@ -2,34 +2,25 @@
 
 \section{Hintergrund und Ausgangssituation}
 
-Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. 
-At vero eos et accusam et justo duo dolores et ea rebum. 
-Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. 
-Automation in cars has a long history.  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. 
-At vero eos et accusam et justo duo dolores et ea rebum.\footnote{Vgl. Martínez-Díaz, M./Soriguera, F./Pérez, I., Autonomous driving: a bird's eye view, 2019, S. 563} 
-Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet Acceptance of autonomous driving will depend on how far a consensus on these norms can be found, first among experts, then in society at large. 
-One ethical condition, however, should be crucial: in no case should the ethical algorithms be put in practice as nontransparent black boxes. 
-The built-in norms should, as far as possible, be understood and commonly shared.\footnote{Baumann, M. F. u. a., Taking responsibility: A responsible research and innovation (RRI) perspective on insurance issues of semi-autonomous driving, 2019, S. 557.}
-\section{Forschungsziel, Forschungsfrage und These}
+This is a fantasy documentary. The pioneering work shown in Hyperland however, is very real.
+Mit diesen Worten beginnt Dougles Adams 50-minütige Dokumentation aus dem Jahre 1990 mit dem treffenden Titel Hyperland. Der renommierte Science-Fiction-Autor stellt in diesem Dokumentarfilm dar, wie ein Internet mit (Hyper-)Links interaktiv navigierbar wäre, und dies Jahre vor den ersten Browsern.
+Im darauffolgenden Jahr entwickelte Tim Berners-Lee das World Wide Web, welches bald einen neuen Standard fürs Internet setzen sollte. Dieser Standard erleichterte das Programmieren der einzelnen Internetseiten, sowie die Navigation zwischen den einzelnen Seiten selbst, und das durch nicht mehr als einen Klick. Diese Version des Internets ist heutzutage als Web1 bekannt und auch wenn dies damals noch vorherzusehen war, prägte es die Vielfältigkeit und Sinnvollheit, wozu sich das Internet entwickeln würde.
 
-Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. 
-At vero eos et accusam et justo duo dolores et ea rebum.\footnote{Vgl. Baumann, M. F. u. a., Taking responsibility: A responsible research and innovation (RRI) perspective on insurance issues of semi-autonomous driving, 2019, S. 558.} 
-Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. \footnote{Baumann, M. F. u. a., Taking responsibility: A responsible research and innovation (RRI) perspective on insurance issues of semi-autonomous driving, 2019, S. 557.}
-Automation in cars has a long history.  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. 
-At vero eos et accusam et justo duo dolores et ea rebum. 
-Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet Acceptance of autonomous driving will depend on how far a consensus on these norms can be found, first among experts, then in society at large. 
-One ethical condition, however, should be crucial: in no case should the ethical algorithms be put in practice as nontransparent black boxes. 
-The built-in norms should, as far as possible, be understood and commonly shared.
+In weniger als einem Jahrzehnt würde sich das Internet noch ändern. Die Ära des Web2 ist geprägt von vielen Technologien und Innovationen, sowie von der Idee, dass der Nutzer immer weniger eine ausschließliche Rolle als passiven Konsumenten einnehmen soll, sondern vielmehr die doppelte Rolle des Konsumenten in einigen Bereichen und des Produktes in anderen, aber auch die des Anbieters, da immer mehr Anwendungen aus dem Web2 dem Laien erlaubten, Inhalte selbst zu erstellen, zu bearbeiten und zu verteilen. Um diese neue Rolle zu definieren, hat sich der Begriff Prosument (aus dem Englischen Prosumer) durchgesetzt.
+Eine der prägnantesten Innovationen dieser Internet-Epoche ist die Weiterentwicklung der Serveranbindung, aber auch neue Formen von Sicherheit sowie Technologien, welche die Kommunikation zwischen dem Computer eines Nutzers und dem Server auf verschiedene Arten verbessern. Wegen der immensen Anzahl an Informationen, welche durch die zentralisierten Server fließen, spricht man allgemein von „Big Data“. Dieser Begriff soll später noch genauer erklärt werden.
+
+Doch auch diese Zeit scheint langsam dem Ende zu neigen. Und damit ist die Zeit reif für den Anbruch des Web3. Beim Web3 steht hauptsächlich die Idee im Vordergrund, das Internet soll dezentral über Peer-to-Peer-Netzwerke laufen. Ein Beispiel davon wären die Blockchains. Allerdings muss sich diese neue Entwicklung noch mit einer Vielzahl von technologischen sowie rechtlichen Herausforderungen auseinandersetzen. Vielerorts ist das Wissen über die Mechanismen, das Potenzial und die Gefahren des Web3 noch unzureichend. Darüber hinaus befinden sich viele seiner Mechanismen noch in einem frühen Stadium und erscheinen vielen noch als zu abstrakt. Schlagwörter wie Kryptowährungen, Smart Contracts und Tokens sind zwar allgegenwärtig, aber es besteht noch Informationsbedarf, was die zugrundeliegenden Mechanismen dieser Anwendungen sowie den Stand der Technik betrifft.
+
+\section{Forschungsziel, Forschungsfrage und These}
+\subsection{Forschungsziel}
+Wenn man von Distributed Ledger Systemen hört, wie beispielsweise dem Blockchain-Netzwerk, ist überwiegend von den positiven Aspekten sowie dem Potenzial, welches diese anbieten, die Rede. „Jede Technologie ist aber lediglich ein Werkzeug und zunächst neutral. Wie wir dieses Werkzeug einsetzen, ist fast nie eine technologische, sondern immer mehr eine humanistische Frage“.
+Im Folgenden soll zunächst ein Überblick über die Grundlagen der Technologien von Big Data und Blockchain gegeben werden. Anschließend sollen beide verglichen werden. Ziel dieser Arbeit ist herauszufinden, ob es als plausibel erscheint, dass Big Data durch Blockchain ersetzt werden soll, und falls ja, wie lange es dauern könnte.
+\subsection{Forschungsfrage}
+Welche Vor- und Nachteile haben die beiden Strukturen (BigData und Blockchain) und wie zukunftstauglich sind sie.
+\subsection{These}
+Im Laufe der kommenden 10 Jahren wird Blockchain die meisten zentralen Systeme ersetzt haben.
 
 
 
 \section{Aufbau der Arbeit}
 
-Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. 
-At vero eos et accusam et justo duo dolores et ea rebum. \footnote{Vgl. Martínez-Díaz, M./Soriguera, F./Pérez, I., Autonomous driving: a bird's eye view, 2019, S. 563}
-Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. 
-Automation in cars has a long history.  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. 
-At vero eos et accusam et justo duo dolores et ea rebum. 
-Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet Acceptance of autonomous driving will depend on how far a consensus on these norms can be found, first among experts, then in society at large. 
-One ethical condition, however, should be crucial: in no case should the ethical algorithms be put in practice as nontransparent black boxes. 
-The built-in norms should, as far as possible, be understood and commonly shared.
