--- a/template/02_hauptteil/hauptteil.tex
+++ b/template/02_hauptteil/hauptteil.tex
@@ -2,7 +2,7 @@
 \chapter{Hauptteil}
 
 \section{Forschungsgegenstand im Detail}
-\subsection{Beschreibung des Standes der Technik beim Autonomen Fahren}
+\subsection{Beschreibung des Standes der Technik der Blockchain}
 
 Lorem \gls{gcd} \gls{lcm}ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
 At vero eos et accusam et justo duo dolores et ea rebum.
@@ -17,7 +17,7 @@ Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit ame
 One ethical condition, however, should be crucial: in no case should the ethical algorithms be put in practice as nontransparent black boxes.
 The built-in norms should, as far as possible, be understood and commonly shared.
 
-\subsection{Größte Unfallrisiken und deren Vermeidung}
+\subsection{Umsetzbarkeit der Blockchain}
 
 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
 At vero eos et accusam et justo duo dolores et ea rebum.
@@ -29,7 +29,7 @@ One ethical condition, however, should be crucial: in no case should the ethical
 The built-in norms should, as far as possible, be understood and commonly shared.
 
 
-\subsection{Ethische Problemsituationen}
+\subsection{Vorteile der Umsetzung}
 
 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
 At vero eos et accusam et justo duo dolores et ea rebum.
@@ -75,72 +75,12 @@ One ethical condition, however, should be crucial: in no case should the ethical
 The built-in norms should, as far as possible, be understood and commonly shared.
 
 
-\section{Literaturanalyse}
+\section{Erhebungsergebnisse}
+\subsection{BigData Vor- und Nachteile}
+\subsection{Blockchain Vor- und Nachteile}
 
-\begin{table}[h]
-	\caption{Tolle Tabelle}
-	\centering
-	\begin{tabular}{ | c | c | c | }
-		\hline
-		cell1 & cell2 & cell3 \\
-		cell4 & cell5 & cell6 \\
-		cell7 & cell8 & cell9 \\
-		\hline
-	\end{tabular}
-	\begin{flushleft}
-		Quelle: Martínez-Díaz, M./Soriguera, F./Pérez, I., Autonomous driving: a bird's eye view, 2019, S. 564.
-	\end{flushleft}
-\end{table}
-
-Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-At vero eos et accusam et justo duo dolores et ea rebum.
-Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-Automation in cars has a long history.  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-At vero eos et accusam et justo duo dolores et ea rebum.\footnote{Vgl. Baumann, M. F. u. a., Taking responsibility: A responsible research and innovation (RRI) perspective on insurance issues of semi-autonomous driving, 2019, S. 558.}
-Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet Acceptance of autonomous driving will depend on how far a consensus on these norms can be found, first among experts, then in society at large.
-One ethical condition, however, should be crucial: in no case should the ethical algorithms be put in practice as nontransparent black boxes.
-The built-in norms should, as far as possible, be understood and commonly shared.
-
-\section{Diskussion}
-
-Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-At vero eos et accusam et justo duo dolores et ea rebum.\footnote{Vgl. Baumann, M. F. u. a., Taking responsibility: A responsible research and innovation (RRI) perspective on insurance issues of semi-autonomous driving, 2019, S. 558.}
-Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-Automation in cars has a long history.  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-At vero eos et accusam et justo duo dolores et ea rebum.
-Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet Acceptance of autonomous driving will depend on how far a consensus on these norms can be found, first among experts, then in society at large.
-One ethical condition, however, should be crucial: in no case should the ethical algorithms be put in practice as nontransparent black boxes.
-The built-in norms should, as far as possible, be understood and commonly shared.
-
-\subsection{Diskussion der These an Hand der Literatur}
-
-Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-At vero eos et accusam et justo duo dolores et ea rebum.\footnote{Vgl. Baumann, M. F. u. a., Taking responsibility: A responsible research and innovation (RRI) perspective on insurance issues of semi-autonomous driving, 2019, S. 558.}
-Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-Automation in cars has a long history.  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-At vero eos et accusam et justo duo dolores et ea rebum.
-Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet Acceptance of autonomous driving will depend on how far a consensus on these norms can be found, first among experts, then in society at large.
-One ethical condition, however, should be crucial: in no case should the ethical algorithms be put in practice as nontransparent black boxes.
-The built-in norms should, as far as possible, be understood and commonly shared.
-
+\section{Diskussion der Ergebnisse}
+\subsection{Diskussion der These}
 \subsection{Qualität der Aussage}
 
-Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-At vero eos et accusam et justo duo dolores et ea rebum.
-Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-Automation in cars has a long history.  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-At vero eos et accusam et justo duo dolores et ea rebum.\footnote{Vgl. Baumann, M. F. u. a., Taking responsibility: A responsible research and innovation (RRI) perspective on insurance issues of semi-autonomous driving, 2019, S. 558.}
-Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet Acceptance of autonomous driving will depend on how far a consensus on these norms can be found, first among experts, then in society at large.
-One ethical condition, however, should be crucial: in no case should the ethical algorithms be put in practice as nontransparent black boxes.
-The built-in norms should, as far as possible, be understood and commonly shared.
-
-\section{Fazit – Konsequnzen}
-
-Lorem ipsum dolor sit amet, consetetur sadipscing elitr\footnote{Vgl. Baumann, M. F. u. a., Taking responsibility: A responsible research and innovation (RRI) perspective on insurance issues of semi-autonomous driving, 2019, S. 558.}, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-At vero eos et accusam et justo duo dolores et ea rebum.
-Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-Automation in cars has a long history.  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-At vero eos et accusam et justo duo dolores et ea rebum.
-Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet Acceptance of autonomous driving will depend on how far a consensus on these norms can be found, first among experts, then in society at large.
-One ethical condition, however, should be crucial: in no case should the ethical algorithms be put in practice as nontransparent black boxes.
-The built-in norms should, as far as possible, be understood and commonly shared.
+\section{Fazit}
