--- a/template/01_einleitung/grundlagen.tex
+++ b/template/01_einleitung/grundlagen.tex
@@ -27,18 +27,17 @@ Private Blockchains werden in der Regel von Unternehmen oder Regierungen betrieb
 \subsection{Token}
 Kryptografische Token stellen programmierbare Vermögenswerte oder Zugriffsrechte dar, die von einem intelligenten Vertrag und einem zugrunde liegenden verteilten Ledger verwaltet werden. Sie sind nur für die Person zugänglich, die den privaten Schlüssel für diese Adresse besitzt, und können nur mit diesem privaten Schlüssel signiert werden. Token könnten die Finanzwelt auf die gleiche Weise beeinflussen wie die E-Mail das Postsystem.
 \subsection{Smart Contracts}
-Smart Contracts sind einfach Programme, die in einer Blockchain gespeichert sind und ausgeführt werden, wenn bestimmte Bedingungen erfüllt sind. Sie werden in der Regel verwendet, um die rechtsgültige Ausfertigung eines Vertrags zu automatisieren, so dass alle Beteiligten sofort Gewissheit über das Ergebnis haben, ohne dass ein Vermittler eingeschaltet werden muss oder Zeit verloren geht. Sie können auch einen Workflow automatisieren und die nächste Aktion auslösen, wenn die Bedingungen erfüllt sind.
-
+Intelligente Verträge sind einfach auf einer Blockchain gespeicherte Programme, die ausgeführt werden, wenn bestimmte Bedingungen erfüllt sind. Sie werden häufig eingesetzt, um die rechtliche Abwicklung eines Vertrages zu automatisieren, so dass alle Parteien sofortige Gewissheit über das Ergebnis haben, ohne dass ein Vermittler eingeschaltet werden muss oder Zeit verloren geht. Sie können auch einen Arbeitsablauf automatisieren und die nächste Aktion auslösen, wenn die Bedingungen erfüllt sind.
 
 \section{Anwendungsmöglichkeiten}
 \subsection{Bitcoin}
-Bitcoin ist eine dezentralisierte digitale Währung, die im Januar 2009 geschaffen wurde. Sie folgt den Ideen, die in einem Weißbuch des mysteriösen und pseudonymen Satoshi Nakamoto dargelegt wurden.12 Die Identität der Person(en), die die Technologie entwickelt haben, ist immer noch ein Geheimnis. Bitcoin verspricht niedrigere Transaktionsgebühren als herkömmliche Online-Zahlungsmechanismen, und im Gegensatz zu staatlich ausgegebenen Währungen wird es von einer dezentralen Behörde betrieben.
+Bitcoin ist eine dezentralisierte digitale Währung, die im Januar 2009 geschaffen wurde. Sie folgt den Ideen, die in einem White Paper des mysteriösen und pseudonymen Satoshi Nakamoto dargelegt wurden.12 Die Identität der Person oder Personen, die die Technologie entwickelt haben, bleibt ein Geheimnis. Bitcoin verspricht niedrigere Transaktionsgebühren als herkömmliche Online-Zahlungsmechanismen und wird im Gegensatz zu staatlich ausgegebenen Währungen von einer dezentralen Behörde verwaltet.
 
 
-Bitcoin ist als eine Art Kryptowährung bekannt, weil es Kryptographie verwendet, um es sicher zu halten. Es gibt keine physischen Bitcoins, sondern nur Guthaben, die in einem öffentlichen Hauptbuch geführt werden, auf das jeder Zugriff hat (obwohl jeder Datensatz verschlüsselt ist). Alle Bitcoin-Transaktionen werden durch eine riesige Menge an Rechenleistung in einem als Mining bekannten Prozess überprüft. Bitcoin wird nicht von Banken oder Regierungen ausgegeben oder unterstützt, noch ist ein einzelner Bitcoin als Ware wertvoll. Obwohl Bitcoin in den meisten Teilen der Welt kein gesetzliches Zahlungsmittel ist, erfreut er sich großer Beliebtheit und hat die Einführung Hunderter anderer Kryptowährungen ausgelöst, die unter dem Begriff Altcoins zusammengefasst werden. Bitcoin wird im Handel üblicherweise als BTC abgekürzt.
+Bitcoin ist als eine Art Kryptowährung bekannt, weil sie Kryptographie verwendet, um ihre Sicherheit zu gewährleisten. Es gibt keine physischen Bitcoins, sondern Guthaben in einem öffentlichen Hauptbuch, auf das jeder zugreifen kann (obwohl alle Aufzeichnungen verschlüsselt sind). Alle Bitcoin-Transaktionen werden durch eine enorme Menge an Rechenleistung in einem Prozess verifiziert, der als Mining bekannt ist. Bitcoin wird nicht von Banken oder Regierungen ausgegeben oder unterstützt, noch hat ein einzelner Bitcoin einen Wert als Ware. Obwohl Bitcoin in den meisten Teilen der Welt kein gesetzliches Zahlungsmittel ist, erfreut er sich großer Beliebtheit und hat die Einführung von Hunderten anderer Kryptowährungen, den sogenannten Altcoins, ausgelöst. Bitcoin wird im Handel oft als BTC abgekürzt.
 \subsection{Steemit}
-Steemit ist eine Blockchain-basierte Social-Media-dApp, die Gemeinschaften schafft, in denen Nutzer für das Teilen ihrer Stimme belohnt werden. Es ist eine neue Art der Aufmerksamkeitsökonomie. 
-Hier sind Nutzer in der Lage Tokens zu gewinnen, sogenannte STEEM’s, welche gegen herkömmliche Währungen umgetauscht werden können. Im Grunde gibt es 4 verschiedene Möglichkeiten, diese zu erhalten: 
+Steemit ist eine Blockchain-basierte Social-Media-dApp, die Gemeinschaften schafft, in denen Nutzer für das Teilen ihrer Stimme belohnt werden. Es ist eine neue Art der Aufmerksamkeitsökonomie.
+Hier sind Nutzer in der Lage Tokens zu gewinnen, sogenannte STEEM’s, welche gegen herkömmliche Währungen umgetauscht werden können. Im Grunde gibt es 4 verschiedene Möglichkeiten, diese zu erhalten:
 Inhalte posten: Jeder Nutzer kann Inhalte hochladen. Je mehr weitere Nutzer diesen Post hochstufen, desto mehr Tokens kann man bekommen.
 Freiberufliche Tätigkeit: Hier kann man sich mit einem Community-Mitglied auf Steemit vernetzen und seine Leidenschaft oder spezielle Fähigkeiten teilen, die man der Community als bezahlte Dienstleistungen anbietet oder als eigenes Produkt vermarktet werden kann.
 Teilnahme an Wettbewerben und Herausforderungen: Steemitblog und viele andere Communities veranstalten regelmäßig Wettbewerbe, an denen jeder Steemianer teilnehmen kann. Wenn man gewinnt und von offiziellen Steem-Curation-Accounts oder anderen großen Walen hochgevotet wird, erhält man Belohnungen für seine Beiträge.
