--- a/template/Fallstudie/Einleitung/Einleitung.tex
+++ b/template/Fallstudie/Einleitung/Einleitung.tex
@@ -75,7 +75,7 @@ Grundsätzlich werden Klimaeffekte abhängig von:
 	\item der Nachfrage von Nutzern
 \end{itemize}
 
-Im direkten Vergleich von autonomen Fahrzeugen zu konventionellen Fahrzeugen fällt besonders der Kraftstoffverbrauch auf,
+Im direkten Vergleich von autonomen Fahrzeugen zu konventionellen Fahrzeugen fällt besonders der Kraftstoffverbrauch und die Entstehung von Feinstaub auf,
 aber auch andere Faktoren können die Umwelt weniger Belasten wie die generelle Reduktion von Fahrzeugen.
 
 \section{Kraftstoffeinsparungen}
