--- a/template/Fallstudie/Einleitung/Einleitung.tex
+++ b/template/Fallstudie/Einleitung/Einleitung.tex
@@ -75,8 +75,9 @@ Grundsätzlich werden Klimaeffekte abhängig von:
 	\item der Nachfrage von Nutzern
 \end{itemize}
 
-Im direkten Vergleich von autonomen Fahrzeugen zu konventionellen Fahrzeugen fällt besonders der Kraftstoffverbrauch und die Entstehung von Feinstaub auf,
-aber auch andere Faktoren können die Umwelt weniger Belasten wie die generelle Reduktion von Fahrzeugen.
+Im direkten Vergleich von autonomen Fahrzeugen zu konventionellen Fahrzeugen fällt ein geringer der Kraftstoffverbrauch und der geringere Ausstoß Feinstaub auf.
+
+Andere Faktoren können die Umwelt entlasten wie der Abbau von Fahrzeugbeständen, und die dadurch wegfallenden negativen Einflüsse durch die Produktion von Fahrzeugen.
 
 \section{Kraftstoffeinsparungen}
 Kraftstoffeinsparungen durch autonomes Fahren im Straßenverkehr können sich durch
@@ -157,60 +158,34 @@ Reduktion an Fahrzeugen erwartet werden.
 
 Mobilitatsdienleiter mit autonomen Taxen können
 Kunden abholen und zu Zielort bringen,
-und vermindern die Notwendigkeit zum Kauf eines Fahrzeugs,
-das im Schnitt 95 Prozent der Zeit ungenutzt parkt.85
+und vermindern die Notwendigkeit zum Kauf eines Fahrzeugs.
 
-Dabei verwischen die traditionellen Grenzen zwischen den
-Verkehrssystemen, weil das autonome Fahrzeug im Prinzip alles sein kann: privates Auto, Taxi, Bus, Car-Sharing-Fahrzeug oder Sammeltaxi.
-Verschiedene Studien versuchen in Szenarien zu berechnen, wie viele private
-Pkw sich durch Robo-Taxen bzw. Robo-Busse ersetzen ließen. So kommt eine Studie für die Stadt München zum Ergebnis, dass eine autonome Stadtflotte von 18.000
-Fahrzeugen den gesamten Individualverkehr innerhalb des festgelegten Servicegebiets sowie 20 Prozent des Pendlerverkehrs abdecken könnte. Damit wären
-theoretisch bei einer zeitlichen Auslastung der Robo-Flotte von über 50 Prozent
-ca. 200.000 der 700.000 in München gemeldeten Fahrzeuge zu ersetzen.86
-Zu ähnlichen Ergebnissen kommen auch andere Studien: Im Falle gemeinschaftlich genutzter autonomer Fahrdienste wären danach nur 10 bis 30 Prozent
-des heutigen Fahrzeugbestandes notwendig, ohne dass es Einschränkungen in der
-Mobilität gäbe.87
-Für die EU und USA erwarten aktuelle Untersuchungen bereits
-zwischen 2020 und 2030 einen Rückgang des Fahrzeugbestandes um 25 Prozent,
-vor allem ausgelöst durch eine intensive Nutzung von autonomen Fahrdiensten
-(inkl. Ride-Sharing).88
-Gleichwohl bliebe auch danach privater Pkw-Besitz von
-dann häufig auch autonomen Fahrzeugen noch wichtig.
-Bis 2040 könnten anderen Szenarien zufolge bereits 50 Prozent der Autos autonom fahren, der Besitz an privaten PKW um 50 Prozent sinken, da jedes gemeinsam genutzte fahrerlose Auto
-nicht weniger als sieben traditionelle Autos ersetzen könnte.89
-Gleichzeitig würde durch Robo-Taxis auch der Parksuchverkehr entfallen, der ja in den Innenstädten
-Städtische Mobilitätsangebote von autonomen Fahrdiensten (Roboter-Taxiflotten),
-die die Kunden abholen und zum gewünschten Zielort bringen, vermindern die
-Notwendigkeit zum Kauf eines privaten Fahrzeugs, das im Schnitt 95 Prozent der
-Zeit ungenutzt parkt.85
-Dabei verwischen die traditionellen Grenzen zwischen den
-Verkehrssystemen, weil das autonome Fahrzeug im Prinzip alles sein kann: privates Auto, Taxi, Bus, Car-Sharing-Fahrzeug oder Sammeltaxi.
-Verschiedene Studien versuchen in Szenarien zu berechnen, wie viele private
-Pkw sich durch Robo-Taxen bzw. Robo-Busse ersetzen ließen. So kommt eine Studie für die Stadt München zum Ergebnis, dass eine autonome Stadtflotte von 18.000
-Fahrzeugen den gesamten Individualverkehr innerhalb des festgelegten Servicegebiets sowie 20 Prozent des Pendlerverkehrs abdecken könnte. Damit wären
-theoretisch bei einer zeitlichen Auslastung der Robo-Flotte von über 50 Prozent
-ca. 200.000 der 700.000 in München gemeldeten Fahrzeuge zu ersetzen.86
-Zu ähnlichen Ergebnissen kommen auch andere Studien: Im Falle gemeinschaftlich genutzter autonomer Fahrdienste wären danach nur 10 bis 30 Prozent
-des heutigen Fahrzeugbestandes notwendig, ohne dass es Einschränkungen in der
-Mobilität gäbe.87 Für die EU und USA erwarten aktuelle Untersuchungen bereits
-zwischen 2020 und 2030 einen Rückgang des Fahrzeugbestandes um 25 Prozent,
-vor allem ausgelöst durch eine intensive Nutzung von autonomen Fahrdiensten
-(inkl. Ride-Sharing).88 Gleichwohl bliebe auch danach privater Pkw-Besitz von
-dann häufig auch autonomen Fahrzeugen noch wichtig. Bis 2040 könnten anderen
-Szenarien zufolge bereits 50 Prozent der Autos autonom fahren, der Besitz an privaten PKW um 50 Prozent sinken, da jedes gemeinsam genutzte fahrerlose Auto
-nicht weniger als sieben traditionelle Autos ersetzen könnte.89 Gleichzeitig würde
+Verschiedene Studien haben in verschiedenen Szenarien berechnet, ob und wie viele Kraftfahrzeuge sich durch autonome Fahrzeuge zusammenfassen ließen.
+Eine Studie kam zu dem Resultat, dass in etwa 18.000 Flottenfahrzeuge den kompletten Individualverkehr von München innerhalb eines Einzuggebietes decken könnte.
+Dadurch könnte auf ungefähr 200 Tausend Fahrzeuge verzichtet werden.
+\footnote{Alternative Antriebe, Autonomes Fahren,
+	Mobilitätsdienstleistungen: Neue Infrastrukturen für
+	die Verkehrswende im Automobilsektor, S. 42}
+
+
+Gleichzeitig würde
 durch Robo-Taxis auch der Parksuchverkehr entfallen, der ja in den Innenstädten
+
 Erstens können neue Fahrten, z.B. zu Freizeitzwecken, und damit Mehrverkehr
 ausgelöst werden, wenn die Mobilitätskosten sinken und das Fahren dadurch
 attraktiver wird.
 Zweitens ist eine Verkehrsverlagerung von Fahrten hin zu Robo-Taxis denkbar,
 die vorher mit dem öffentlichen Verkehr bzw. mit dem Fahrrad zurückgelegt
-wurden. So könnten autonome Fahrangebote wegen des besseren, weil komfortableren Service präferiert werden. Dies könnte zu höheren Pkw-Fahrleistungen führen.92
-Drittens können sich längerfristig auch raumintensivere Siedlungsstrukturen und damit weitere Wege zu den Aktivitätsorten (Wohnen, Arbeit, Freizeit) entwickeln. So erleichtern autonome Fahrzeuge längere Pendelwege, da
+wurden. So könnten autonome Fahrangebote wegen des besseren, weil komfortableren Service präferiert werden.
+Dies könnte zu höheren Pkw-Fahrleistungen führen.92
+
+Drittens können sich längerfristig auch raumintensivere Siedlungsstrukturen und damit weitere Wege zu den Aktivitätsorten (Wohnen, Arbeit, Freizeit) entwickeln.
+So erleichtern autonome Fahrzeuge längere Pendelwege, da
 die Mobilitätszeit durch den Wegfall der Fahraufgabe anders oder effizienter,
 z.B. zum Arbeiten oder zum Schlafen, genutzt werden kann. Dadurch können
 Wohnorte in stadtfernen Regionen künftig weit attraktiver werden, zumal nicht
 mit sinkenden Mietpreisen in Metropolen zu rechnen ist.
+
 Viertens können autonome Fahrzeuge auch privat bzw. als Firmenfahrzeuge gekauft und verwendet werden.93 Vorstellbar sind kundenindividuelle
 Robo-Shuttles oder etwa «autonom fahrende Arbeits- und Schlafplätze», die
 etwa von Außendienstmitarbeitern genutzt werden. Dadurch könnten die
